Fix bug 342101

Fix some issues with view-port intersection by using the kis_algebra_2d
function.

BUG:342101