krita/plugins/assistants/RulerAssistant/PerspectiveAssistant.cc
@@ -26,6 +26,7 @@
 #include <QTransform>
 
 #include "kis_coordinates_converter.h"
+#include "kis_algebra_2d.h"
 
 #include <math.h>
 #include <limits>
@@ -196,10 +197,11 @@ void PerspectiveAssistant::drawAssistant(QPainter& gc, const QRectF& updateRect,
         //find vanishing point, find mouse, draw line between both.
         QPainterPath path2;
         QPointF intersection(0, 0);//this is the position of the vanishing point.
-        QPointF delta(0,0);//this is the difference between the vanishing point and the mouse-position//
         QPointF mousePos(0,0);
-        QPointF endPoint(0,0);//this is the final point that the line is being extended to, we seek it just outside the view port//
-    
+        QLineF snapLine;
+        QRect viewport= gc.viewport();
+        QRect bounds;
+        
         if (canvas){
             //simplest, cheapest way to get the mouse-position//
             mousePos= canvas->canvasWidget()->mapFromGlobal(QCursor::pos());
@@ -212,28 +214,32 @@ void PerspectiveAssistant::drawAssistant(QPainter& gc, const QRectF& updateRect,
         //figure out if point is in the perspective grid//
         if (poly.containsPoint(initialTransform.inverted().map(mousePos), Qt::OddEvenFill)==true){
             if (QLineF(poly[0], poly[1]).intersect(QLineF(poly[2], poly[3]), &intersection) != QLineF::NoIntersection) {
-                path2.moveTo(initialTransform.map(intersection));
-                path2.lineTo(mousePos);
-                delta= mousePos-initialTransform.map(intersection);
-                //qDebug()<<delta;
-                endPoint=mousePos+delta;
-                do {
-                    endPoint=endPoint+delta;
+                snapLine = QLineF(initialTransform.map(intersection), mousePos);
+                KisAlgebra2D::intersectLineRect(snapLine, viewport);
+                bounds= QRect(snapLine.p1().toPoint(), snapLine.p2().toPoint());
+                QPainterPath path;
+                if (bounds.contains(intersection.toPoint())){
+                    path2.moveTo(intersection);
+                    path2.lineTo(snapLine.p1());
                 }
-                while (gc.viewport().contains(endPoint.toPoint(), false)==true);
-
-                path2.lineTo(endPoint);
+                else {
+                    path2.moveTo(snapLine.p1());
+                    path2.lineTo(snapLine.p2());
+                }
             }
             if (QLineF(poly[1], poly[2]).intersect(QLineF(poly[3], poly[0]), &intersection) != QLineF::NoIntersection) {
-                path2.moveTo(initialTransform.map(intersection));
-                path2.lineTo(mousePos);
-                delta= mousePos-initialTransform.map(intersection);
-                endPoint=mousePos+delta;
-                do {
-                    endPoint=endPoint+delta;
+                snapLine = QLineF(initialTransform.map(intersection), mousePos);
+                KisAlgebra2D::intersectLineRect(snapLine, viewport);
+                bounds= QRect(snapLine.p1().toPoint(), snapLine.p2().toPoint());
+                QPainterPath path;
+                if (bounds.contains(intersection.toPoint())){
+                    path2.moveTo(intersection);
+                    path2.lineTo(snapLine.p1());
                 }
-                while (gc.viewport().contains(endPoint.toPoint(), false)==true);
-                path2.lineTo(endPoint);
+                else {
+                    path2.moveTo(snapLine.p1());
+                    path2.lineTo(snapLine.p2());
+                }
             }
             drawPreview(gc, path2);
         }
